--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <title>Contato - Adriano Rosa</title>
     <link rel="stylesheet" href="style/reset.css"> <!-- CSS Rese de NIcolas Gallaghter-->
     <link rel="stylesheet" href="style/style.css">
     <script type="text/javascript" src="menu.js"></script>
@@ -18,7 +18,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portifolio.html">Portifólio</a></li>
                     <li><a href="curriculo.html">Curriculo</a></li>
-                    <li><a href="contato.html">contato</a></li>
+                    <li><a href="Contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
