--- a/curriculo.html
+++ b/curriculo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <title>Curriculo - Adriano Rosa</title>
     <link rel="stylesheet" href="style/reset.css"> <!-- CSS Rese de NIcolas Gallaghter-->
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -17,7 +17,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portifolio.html">Portifólio</a></li>
                     <li><a href="curriculo.html">Curriculo</a></li>
-                    <li><a href="contato.html">contato</a></li>
+                    <li><a href="Contato.html">contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,7 +27,7 @@
 
         <div class="caminho" class='curriculo'>
             <ul>
-                <li><a href="index.html"></a>Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li>></li>
                 <li><a href="curriculo.html"></a>Curriculo</li>
             </ul>
