--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portifolio.html">Portifólio</a></li>
                     <li><a href="curriculo.html">Curriculo</a></li>
-                    <li><a href="contato.html">contato</a></li>
+                    <li><a href="Contato.html">contato</a></li>
                 </ul>
             </nav>
         </div>
