--- a/portifolio.html
+++ b/portifolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
+    <title>Portifólio - Adriano Rosa</title>
     <link rel="stylesheet" href="style/reset.css"> <!-- CSS Rese de NIcolas Gallaghter-->
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -26,7 +26,7 @@
     <main class="principal">
         <div class="caminho">
             <ul>
-                <li><a href="index.html"></a>Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li>></li>
                 <li><a href="portifolio.html"></a>Portifólio</li>
             </ul>
