--- a/portifolio.html
+++ b/portifolio.html
@@ -1,60 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio - Adriano Rosa</title>
-    <link rel="stylesheet" href="style/reset.css"> <!-- CSS Rese de NIcolas Gallaghter-->
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="assets/style/normalize.css">
+    <link rel="stylesheet" href="assets/style/reset.css">
+    <link rel="stylesheet" href="assets/style/cores.css">
+    <link rel="stylesheet" href="assets/style/fontes.css">
+    <link rel="stylesheet" href="assets/style/body.css">
+    <link rel="stylesheet" href="assets/style/cabecalho.css">
+    <link rel="stylesheet" href="assets/style/logo.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-item.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-icone.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho-lista.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho-item.css">
+    <link rel="stylesheet" href="assets/style/titulo-principal.css">
+    <link rel="stylesheet" href="assets/style/caixas/caixas.css">
+    <link rel="stylesheet" href="assets/style/caixas/caixa.css">
+    <link rel="stylesheet" href="assets/style/caixas/caixa-link.css">
+    <link rel="stylesheet" href="assets/style/caixas/caixa-conteudo.css">
+
 </head>
+
 <body id="portifolio">
-    <header class="alterar-fundo">
-        <div class="cabecalho">
-            <h1>Adriano<span> Rosa</span></h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portifolio.html">Portifólio</a></li>
-                    <li><a href="curriculo.html">Curriculo</a></li>
-                    <li><a href="contato.html">contato</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header class="cabecalho">
+        <h1 class="logo">Adriano Rosa</h1>
+        <nav class="menu">
+            <ul class="menu__lista">
+                <li class="menu__icone">&#9776;</li>
+                <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
+                <li class="menu__item"><a class="menu__link" href="portifolio.html">Portifólio</a></li>
+                <li class="menu__item"><a class="menu__link" href="curriculo.html">Curriculo</a></li>
+                <li class="menu__item"><a class="menu__link" href="Contato.html">contato</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main class="principal">
         <div class="caminho">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>></li>
-                <li><a href="portifolio.html"></a>Portifólio</li>
+            <ul class="caminho__lista">
+                <li class="caminho__item"><a class="caminho__link" href="index.html">Home</a></li>
+                <li class="caminho__item">></li>
+                <li class="caminho__item">Portifólio</li>
             </ul>
         </div>
 
-        <h2 class="titulo-principal">Portifólio</h2>
+        <h2 class="tituloPrincipal">Portifólio</h2>
 
-        <div class="box">
-            <a href="https://adrianor85.github.io/projeto-cordel" target="_blank">
-                <div class="box-conteudo">
-                    <div class="box-texto">
-                        <h3>Página Cordel</h3>
-                        <p>Front End</p>
+        <div class="caixas">
+            <article class="caixa">
+                <a class="caixa__link" href="https://adrianor85.github.io/projeto-cordel" target="_blank">
+                    <div class="caixa__conteudo">
+                        <h3 class="caixa__conteudo___titulo">Página Cordel</h3>
+                        <p class="caixa__conteudo___texto">Front End</p>
                     </div>
-                </div>
-            </a>            
-        </div>
-
-        <div class="box">
-            <a href="#" target="_blank">
-                <div class="box-conteudo">
-                    <div class="box-texto">
-                        <h3>Site Pet Shop</h3>
-                        <p>Front End</p>
+                </a>
+            </article>
+            <article class="caixa">
+                <a class="caixa__link" href="https://adrianor85.github.io/projeto-cordel" target="_blank">
+                    <div class="caixa__conteudo">
+                        <h3 class="caixa__conteudo___titulo">Página Cordel</h3>
+                        <p class="caixa__conteudo___texto">Front End</p>
                     </div>
-                </div>
-            </a>            
+                </a>
+            </article>
         </div>
     </main>
 </body>
+
 </html>
