--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Adriano Rosa</title>
     <link rel="stylesheet" href="assets/style/normalize.css">
     <link rel="stylesheet" href="assets/style/reset.css">
-    <link rel="stylesheet" href="assets/style/cores.css">
-    <link rel="stylesheet" href="assets/style/fontes.css">
+    <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="assets/style/body.css">
     <link rel="stylesheet" href="assets/style/cabecalho.css">
     <link rel="stylesheet" href="assets/style/logo.css">
+    <link rel="stylesheet" href="assets/style/menu/menu.css">
     <link rel="stylesheet" href="assets/style/menu/menu-item.css">
     <link rel="stylesheet" href="assets/style/menu/menu-icone.css">
     <link rel="stylesheet" href="assets/style/capa/capa.css">
@@ -25,7 +25,8 @@
 
 <body id="home">
 
-    <header class="cabecalho">
+    <header class="cabecalho cabecalho--modificado">
+        <h1 class="logo--off">Adriano Rosa</h1>
         <nav class="menu">
             <ul class="menu__lista">
                 <li class="menu__icone">&#9776;</li>
