--- a/portifolio.html
+++ b/portifolio.html
@@ -8,8 +8,7 @@
     <title>Portifólio - Adriano Rosa</title>
     <link rel="stylesheet" href="assets/style/normalize.css">
     <link rel="stylesheet" href="assets/style/reset.css">
-    <link rel="stylesheet" href="assets/style/cores.css">
-    <link rel="stylesheet" href="assets/style/fontes.css">
+    <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="assets/style/body.css">
     <link rel="stylesheet" href="assets/style/cabecalho.css">
     <link rel="stylesheet" href="assets/style/logo.css">
@@ -48,8 +47,6 @@
                 <li class="caminho__item">Portifólio</li>
             </ul>
         </div>
-
-        <h2 class="tituloPrincipal">Portifólio</h2>
 
         <div class="caixas">
             <article class="caixa">
