--- a/portifolio.html
+++ b/portifolio.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="assets/style/body.css">
     <link rel="stylesheet" href="assets/style/cabecalho.css">
+    <link rel="stylesheet" href="assets/style/cabecalhoJS.css">
     <link rel="stylesheet" href="assets/style/logo.css">
     <link rel="stylesheet" href="assets/style/menu/menu-item.css">
     <link rel="stylesheet" href="assets/style/menu/menu-icone.css">
+    <link rel="stylesheet" href="assets/style/menu/menu__link.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-lista.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-item.css">
@@ -22,19 +24,20 @@
     <link rel="stylesheet" href="assets/style/caixas/caixa.css">
     <link rel="stylesheet" href="assets/style/caixas/caixa-link.css">
     <link rel="stylesheet" href="assets/style/caixas/caixa-conteudo.css">
+    <script type="text/javascript" src="assets/js/script.js"></script>
 
 </head>
 
 <body id="portifolio">
-    <header class="cabecalho">
+    <header id="cabecalho" class="cabecalho">
         <h1 class="logo">Adriano Rosa</h1>
-        <nav class="menu">
-            <ul class="menu__lista">
-                <li class="menu__icone">&#9776;</li>
-                <li class="menu__item"><a class="menu__link" href="index.html">Home</a></li>
-                <li class="menu__item"><a class="menu__link" href="portifolio.html">Portifólio</a></li>
-                <li class="menu__item"><a class="menu__link" href="curriculo.html">Curriculo</a></li>
-                <li class="menu__item"><a class="menu__link" href="Contato.html">contato</a></li>
+        <nav>
+            <ul class="menu__lista menu__lista--js">
+                <li class="menu__item menu__item--js"><a class="menu__link" href="index.html">Home</a></li>
+                <li class="menu__item menu__item--js"><a class="menu__link" href="portifolio.html">Portifólio</a></li>
+                <li class="menu__item menu__item--js"><a class="menu__link" href="curriculo.html">Curriculo</a></li>
+                <li class="menu__item menu__item--js"><a class="menu__link" href="Contato.html">Contato</a></li>
+                <li class="menu__icone" onclick="openMenu()">&#9776;</li>
             </ul>
         </nav>
     </header>
