--- a/portifolio.html
+++ b/portifolio.html
@@ -36,7 +36,7 @@
                 <li class="menu__item menu__item--js"><a class="menu__link" href="index.html">Home</a></li>
                 <li class="menu__item menu__item--js"><a class="menu__link" href="portifolio.html">Portifólio</a></li>
                 <li class="menu__item menu__item--js"><a class="menu__link" href="curriculo.html">Curriculo</a></li>
-                <li class="menu__item menu__item--js"><a class="menu__link" href="Contato.html">Contato</a></li>
+                <li class="menu__item menu__item--js"><a class="menu__link" href="contato.html">Contato</a></li>
                 <li class="menu__icone" onclick="openMenu()">&#9776;</li>
             </ul>
         </nav>
