mudando alguns detalhes

--- a/portifolio.html
+++ b/portifolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/style/caminho/caminho.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-lista.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-item.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho__link.css">
     <link rel="stylesheet" href="assets/style/titulo-principal.css">
     <link rel="stylesheet" href="assets/style/caixas/caixas.css">
     <link rel="stylesheet" href="assets/style/caixas/caixa.css">
@@ -37,7 +38,7 @@
                 <li class="menu__item menu__item--js"><a class="menu__link" href="portifolio.html">Portifólio</a></li>
                 <li class="menu__item menu__item--js"><a class="menu__link" href="curriculo.html">Curriculo</a></li>
                 <li class="menu__item menu__item--js"><a class="menu__link" href="contato.html">Contato</a></li>
-                <li class="menu__icone" onclick="openMenu()">&#9776;</li>
+                <li class="menu__icone menu__icone--js" onclick="openMenu()">&#9776;</li>
             </ul>
         </nav>
     </header>
