--- a/curriculo.html
+++ b/curriculo.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/style/caminho/caminho.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-lista.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-item.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho__link.css">
     <link rel="stylesheet" href="assets/style/cartao.css">
     <link rel="stylesheet" href="assets/style/apresentacao/apresentacao.css">
     <link rel="stylesheet" href="assets/style/apresentacao/apresentacao__foto.css">
@@ -44,7 +45,7 @@
                 <li class="menu__item menu__item--js"><a class="menu__link" href="portifolio.html">Portifólio</a></li>
                 <li class="menu__item menu__item--js"><a class="menu__link" href="curriculo.html">Curriculo</a></li>
                 <li class="menu__item menu__item--js"><a class="menu__link" href="contato.html">Contato</a></li>
-                <li class="menu__icone" onclick="openMenu()">&#9776;</li>
+                <li class="menu__icone menu__icone--js" onclick="openMenu()">&#9776;</li>
             </ul>
         </nav>
     </header>
@@ -78,7 +79,7 @@
                 <p class="curriculo__descricao">Sou formado em Técnico em Logística, estudei inglês na Nova Zelândia
                     por 3 meses onde adquiri o conhecimento básico na língua. Atualmente estou estudando Front end pela
                     site a Alura.</p>
-                <p class="curriculo__descricao">Na área profissional trabalhei como operador de máquina por mais de 10 anos, tive uma breve passagem
+                <p class="curriculo__descricao curriculo__descricao--espaco">Na área profissional trabalhei como operador de máquina por mais de 10 anos, tive uma breve passagem
                     pelo comércio, tanto no Brasil como no Exterior, hoje trabalho na área de expedição como operador
                     logístico.</p>
             </section>
