--- a/contato.html
+++ b/contato.html
@@ -13,14 +13,16 @@
     <link rel="stylesheet" href="assets/style/cabecalho.css">
     <link rel="stylesheet" href="assets/style/cabecalhoJS.css">
     <link rel="stylesheet" href="assets/style/logo.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-lista.css">
     <link rel="stylesheet" href="assets/style/menu/menu-item.css">
     <link rel="stylesheet" href="assets/style/menu/menu-icone.css">
-    <link rel="stylesheet" href="assets/style/menu/menu__link.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-link.css">
+    <link rel="stylesheet" href="assets/style/principal.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-lista.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-item.css">
-    <link rel="stylesheet" href="assets/style/caminho/caminho__link.css">
-    <link rel="stylesheet" href="assets/style/titulo-principal.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho-link.css">
+    <link rel="stylesheet" href="assets/style/contato/contatos.css">
     <link rel="stylesheet" href="assets/style/contato/contato.css">
     <link rel="stylesheet" href="assets/style/contato/contato-tipo.css">
     <link rel="stylesheet" href="assets/style/contato/contato-dados.css">
@@ -51,30 +53,23 @@
                 <li class="caminho__item">Contatos</li>
             </ul>
         </section>
-
-        <section>
+        <section class="contatos">
             <div class="contato">
                 <h3 class="contato__tipo">E-mail:</h3>
                 <p class="contato__dados">adrianorosa085@gmail.com</p>
-
                 <h3 class="contato__tipo">Telefone:</h3>
                 <p class="contato__dados">55 47 996374501</p>
-
                 <h3 class="contato__tipo">Redes Sociais:</h3>
                 <a class="contato__link" href="https://github.com/AdrianoR85" target="_blank">
                     <img class="contato__imagem--icone" src="assets/image/github.png" alt="Link para o github"></a>
                 <a href="https://www.instagram.com/adriano.rosa85/" target="_blank">
-                    <img class="contato__imagem--icone" src="assets/image/instagram .png"
-                        alt="Link para o instagram"></a>
-                <a
-                    href="https://www.linkedin.com/feed/?trk=BR-SEM_google-adwords_Jordan-brand-sign-up"
-                    target="_blank">
-                    <img class="contato__imagem--icone" src="assets/image/linkedin.png"
-                        alt="Link para o linkedin"></a>
+                    <img class="contato__imagem--icone" src="assets/image/instagram .png" alt="Link para o instagram"></a>
+                <a href="https://www.linkedin.com/feed/?trk=BR-SEM_google-adwords_Jordan-brand-sign-up" target="_blank">
+                    <img class="contato__imagem--icone" src="assets/image/linkedin.png" alt="Link para o linkedin"></a>
             </div>
         </section>
-
     </main>
+
 </body>
 
 </html>
