--- a/curriculo.html
+++ b/curriculo.html
@@ -14,24 +14,26 @@
     <link rel="stylesheet" href="assets/style/logo.css">
     <link rel="stylesheet" href="assets/style/menu/menu-item.css">
     <link rel="stylesheet" href="assets/style/menu/menu-icone.css">
-    <link rel="stylesheet" href="assets/style/menu/menu__link.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-link.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-lista.css">
+    <link rel="stylesheet" href="assets/style/principal.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-lista.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-item.css">
-    <link rel="stylesheet" href="assets/style/caminho/caminho__link.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho-link.css">
     <link rel="stylesheet" href="assets/style/cartao.css">
     <link rel="stylesheet" href="assets/style/apresentacao/apresentacao.css">
-    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao__foto.css">
-    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao__nome.css">
-    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao__titulo.css">
-    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao__texto.css">
+    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao-foto.css">
+    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao-nome.css">
+    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao-titulo.css">
+    <link rel="stylesheet" href="assets/style/apresentacao/apresentacao-texto.css">
     <link rel="stylesheet" href="assets/style/curriculo/curriculo.css">
-    <link rel="stylesheet" href="assets/style/curriculo/curriculi__secao.css">
-    <link rel="stylesheet" href="assets/style/curriculo/curriculo__titulo.css">
-    <link rel="stylesheet" href="assets/style/curriculo/curriculo__subTitulo.css">
-    <link rel="stylesheet" href="assets/style/curriculo/curriculo__descricao.css">
-    <link rel="stylesheet" href="assets/style/curriculo/curriculo__lista.css">
-    <link rel="stylesheet" href="assets/style/curriculo/curriculo__lugar.css">
+    <link rel="stylesheet" href="assets/style/curriculo/curriculo-secao.css">
+    <link rel="stylesheet" href="assets/style/curriculo/curriculo-titulo.css">
+    <link rel="stylesheet" href="assets/style/curriculo/curriculo-subTitulo.css">
+    <link rel="stylesheet" href="assets/style/curriculo/curriculo-descricao.css">
+    <link rel="stylesheet" href="assets/style/curriculo/curriculo-lista.css">
+    <link rel="stylesheet" href="assets/style/curriculo/curriculo-lugar.css">
     <script type="text/javascript" src="assets/js/script.js"></script>
 
 </head>
@@ -50,8 +52,7 @@
         </nav>
     </header>
 
-    <main id="curriculo">
-
+    <main class="principal">
         <section class="caminho">
             <ul class="caminho__lista">
                 <li class="caminho__item"><a class="caminho__link" href="index.html">Home</a></li>
@@ -61,8 +62,8 @@
         </section>
 
         <section class="cartao">
+            <img class="cartao__foto" src="assets/image/foto-curriculo.jpg" alt="minha foto">
             <div class="apresentacao">
-                <img class="apresentacao__foto" src="assets/image/foto-curriculo.jpg" alt="">
                 <h2 class="apresentacao__nome">Adriano Rosa</h2>
                 <h3 class="apresentacao__titulo">Ocupação</h3>
                 <p class="apresentacao__texto">Operador Logístico</p>
