--- a/portifolio.html
+++ b/portifolio.html
@@ -13,13 +13,15 @@
     <link rel="stylesheet" href="assets/style/cabecalho.css">
     <link rel="stylesheet" href="assets/style/cabecalhoJS.css">
     <link rel="stylesheet" href="assets/style/logo.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-lista.css">
     <link rel="stylesheet" href="assets/style/menu/menu-item.css">
     <link rel="stylesheet" href="assets/style/menu/menu-icone.css">
-    <link rel="stylesheet" href="assets/style/menu/menu__link.css">
+    <link rel="stylesheet" href="assets/style/menu/menu-link.css">
+    <link rel="stylesheet" href="assets/style/principal.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-lista.css">
     <link rel="stylesheet" href="assets/style/caminho/caminho-item.css">
-    <link rel="stylesheet" href="assets/style/caminho/caminho__link.css">
+    <link rel="stylesheet" href="assets/style/caminho/caminho-link.css">
     <link rel="stylesheet" href="assets/style/titulo-principal.css">
     <link rel="stylesheet" href="assets/style/caixas/caixas.css">
     <link rel="stylesheet" href="assets/style/caixas/caixa.css">
