--- a/portifolio.html
+++ b/portifolio.html
@@ -64,9 +64,9 @@
                 </a>
             </article>
             <article class="caixa">
-                <a class="caixa__link" href="https://adrianor85.github.io/projeto-cordel" target="_blank">
+                <a class="caixa__link" href="https://adrianor85.github.io/pet-shop" target="_blank">
                     <div class="caixa__conteudo">
-                        <h3 class="caixa__conteudo___titulo">Página Cordel</h3>
+                        <h3 class="caixa__conteudo___titulo">Pet-shop</h3>
                         <p class="caixa__conteudo___texto">Front End</p>
                     </div>
                 </a>
