--- a/portifolio.html
+++ b/portifolio.html
@@ -64,10 +64,11 @@
                 </a>
             </article>
             <article class="caixa">
-                <a class="caixa__link" href="https://adrianor85.github.io/pet-shop" target="_blank">
+                <a class="caixa__link" href="https://adrianor85.github.io/flexbox/" target="_blank">
                     <div class="caixa__conteudo">
-                        <h3 class="caixa__conteudo___titulo">Pet-shop</h3>
-                        <p class="caixa__conteudo___texto">Front End</p>
+                        <h3 class="caixa__conteudo___titulo">Alurinha</h3>
+                        <p class="caixa__conteudo___texto">Front End - Flexbox</p>
+                        <p class="caixa__conteudo--texto">Desenvolvido no Curso</p>
                     </div>
                 </a>
             </article>
