--- a/portifolio.html
+++ b/portifolio.html
@@ -60,6 +60,16 @@
                     <div class="caixa__conteudo">
                         <h3 class="caixa__conteudo___titulo">Página Cordel</h3>
                         <p class="caixa__conteudo___texto">Front End</p>
+                        <p class="caixa__conteudo--texto">Prática</p>
+                    </div>
+                </a>
+            </article>
+            <article class="caixa">
+                <a class="caixa__link" href="https://adrianor85.github.io/Pet-Shop/" target="_blank">
+                    <div class="caixa__conteudo">
+                        <h3 class="caixa__conteudo___titulo">Pet-Shop</h3>
+                        <p class="caixa__conteudo___texto">Front End</p>
+                        <p class="caixa__conteudo--texto">Prática</p>
                     </div>
                 </a>
             </article>
@@ -72,6 +82,7 @@
                     </div>
                 </a>
             </article>
+            
         </div>
     </main>
 </body>
